# proofing

./: README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml  run_dev.py  test_api.py
backend/app/: __init__.py  config.py  main.py  proofreading_rules.py  rules.json  text_extractor.py  utils.py
frontend/: Dockerfile  README.md
frontend/app/: .env  nginx.conf  package-lock.json  package.json
frontend/app/src/: App.css  App.tsx  index.css
frontend/app/src/api/: client.ts  service.ts
frontend/app/src/components/: CheckResults.css  CheckResults.tsx  FileUpload.css  FileUpload.tsx  FileUploader.css  FileUploader.tsx  LoadingSpinner.css  LoadingSpinner.tsx
frontend/app/src/types/: api.ts
